RESOLVED FIXED110721
Fix style errors in WebCore/editing/{htmlediting,markup,visible_units}.*
https://bugs.webkit.org/show_bug.cgi?id=110721
Summary Fix style errors in WebCore/editing/{htmlediting,markup,visible_units}.*
Kent Tamura
Reported 2013-02-24 21:35:09 PST
Fix style errors in WebCore/editing/{htmlediting,markup,visible_units}.*
Attachments
Patch (19.62 KB, patch)
2013-02-24 21:37 PST, Kent Tamura
no flags
Kent Tamura
Comment 1 2013-02-24 21:37:32 PST
WebKit Review Bot
Comment 2 2013-02-24 23:29:16 PST
Comment on attachment 189997 [details] Patch Rejecting attachment 189997 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=gce-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 189997, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: -conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 54>At revision 13692. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Updating OpenSource fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Full output: http://queues.webkit.org/results/16667066
WebKit Review Bot
Comment 3 2013-02-25 01:44:04 PST
Comment on attachment 189997 [details] Patch Clearing flags on attachment: 189997 Committed r143893: <http://trac.webkit.org/changeset/143893>
WebKit Review Bot
Comment 4 2013-02-25 01:44:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.