Fix style errors in WebCore/editing/{htmlediting,markup,visible_units}.* https://bugs.webkit.org/show_bug.cgi?id=110721

Reviewed by Ryosuke Niwa.

No new tests. This should not make any bahevior changes.

* editing/htmlediting.cpp:
(WebCore::lowestEditableAncestor):
(WebCore):
(WebCore::isSpecialElement):
(WebCore::enclosingListChild):
(WebCore::canMergeLists):
(WebCore::tabSpanNode):
(WebCore::isNodeRendered):
(WebCore::caretMaxOffset):
* editing/htmlediting.h:
(WebCore):
* editing/markup.cpp:
(WebCore::StyledMarkupAccumulator::appendElement):
* editing/markup.h:
(WebCore):
* editing/visible_units.cpp:
(WebCore::previousRootInlineBoxCandidatePosition):
(WebCore::nextRootInlineBoxCandidatePosition):
(WebCore::wordBreakIteratorForMinOffsetBoundary):
(WebCore::previousBoundary):
(WebCore::endOfLine):
(WebCore::previousLinePosition):
(WebCore::nextLinePosition):
(WebCore::nextSentencePositionBoundary):
(WebCore::startOfParagraph):
(WebCore::endOfParagraph):


Canonical link: https://commits.webkit.org/129008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143893 268f45cc-cd09-0410-ab3c-d52691b4dbfc